[package]
name = "nylas"
version = "0.0.8"
edition = "2021"
description = "The non-official Rust SDK for the Nylas API."
license = "MIT"
repository = "https://github.com/wiseaidev/nylas"
homepage = "https://github.com/wiseaidev/nylas"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
documentation = "https://docs.rs/nylas"
readme = "README.md"
keywords = ["nylas", "nylas-sdk", "API", "Rust"]

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
url = "2.4.1"

[dev-dependencies]
# TODO

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
# TODO

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
